--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "lucide-react": "^0.562.0",
+    "motion": "^12.27.1",
     "next": "16.1.2",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
